--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,36 +1,44 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Todo App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/todo_lists">My todos</a>
-        </li>
-        <!-- <li class="nav-item">
-          
-          
-        </li>
-        <li class="nav-item">
-          
-          
-        </li>
-        <li class="nav-item">
-        </li>
-        <li class="nav-item">
-          
-          
-        </li> -->
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Todo App</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <% if user_is_signedin? %>
+          <li class="nav-item">
+            <a class="nav-link" href="/todo_lists">My todos</a>
+          </li>
+          <li class="nav-item">
+            
+            <%= link_to "Edit Profile",edit_user_registration_path,class:"nav-link"%>
+            
+          </li>
+          <li class="nav-item">
+            
+            <%= button_to "Sign Out",destroy_user_session_path,method: :delete,class:"btn btn-danger"%>
+            
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up",new_user_registration_path,class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            
+              <%= link_to "Sign In",new_user_session_path,class:"nav-link"%>
+            
+          </li>
+          <% else %>
+          You are not signed in
+          <% end %>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
