--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,9 +10,9 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <% if user_signed_in? %>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/todo_lists">My todos</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             
             <%= link_to "Edit Profile",edit_user_registration_path,class:"nav-link"%>
