--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -23,6 +23,11 @@
         <%= form.label :desc, style: "display: block", class:"form-label" %>
         <%= form.text_field :desc, class:"form-control" %>
       </div>
+      <div>
+        <%= form.label :"User ID", style: "display: block", class:"form-label" %>
+        <%= form.number_field :user_id, id: :todo_list_user_id, class:"form-control", value: current_user.id, type: :hidden %>
+        </div>
+        <!-- # <%= current_user.id %> -->
       
       <div class="my-2">
         <%= form.submit class:"btn btn-secondary"%>
