Some changes in home page

--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -33,7 +33,7 @@
          -->
         </tr>
         <% else %>
-        
+
         <% end %>
         <% end %>
     </table>
@@ -43,9 +43,15 @@
     <%= link_to 'New Todo' , new_todo_list_path, class:"btn btn-secondary" %>
   </div>
 <% else %>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  You are not signed in so you cannot access or make ToDos
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
 
+  <h1 class="text-center">You are not Signed in!</h1>
+  <div class="container my-4" style="display:flex; align-items: center; justify-content: center;">
+
+    <%= button_to "Sign Up",new_user_registration_path,class:"btn btn-secondary mx-2" %>
+    <%= button_to "Sign In",new_user_session_path,class:"btn btn-secondary mx-2"%>
+  </div>
 </div>
+</div>
+
 <% end %>
