--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -48,8 +48,8 @@
   <h1 class="text-center">You are not Signed in!</h1>
   <div class="container my-4" style="display:flex; align-items: center; justify-content: center;">
 
-    <%= button_to "Sign Up",new_user_registration_path,class:"btn btn-secondary mx-2" %>
-    <%= button_to "Sign In",new_user_session_path,class:"btn btn-secondary mx-2"%>
+    <%= link_to "Sign Up",new_user_registration_path,class:"btn btn-secondary mx-2" %>
+    <%= link_to "Sign In",new_user_session_path,class:"btn btn-secondary mx-2"%>
   </div>
 </div>
 </div>
